compiler/tests/fa/errors/pure_impure_call.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
تابع چاپگر(مقدار : صحیح) : صحیح:
    چاپ(مقدار)
    بازگشت مقدار
پایان

خالص تابع دوبرابر(مقدار : صحیح) : صحیح:
    بازگشت چاپگر(مقدار) * 2
پایان

تابع اصلی:
    چاپ(دوبرابر(3))
پایان
